--- a/src/pages/form/form.style.scss
+++ b/src/pages/form/form.style.scss
@@ -69,9 +69,11 @@
       align-items: center;
       cursor: pointer;
 
-      &:hover {
-        opacity: 0.85;
-        border-right: 1px solid var.$emphasis-divider-color;
+      @include mixin.desktopStyle() {
+        &:hover {
+          opacity: 0.85;
+          border-right: 1px solid var.$emphasis-divider-color;
+        }
       }
 
       &__title {
